##################################################
 Revision history for Log::Log4perl
##################################################

1.11 (not yet released)
    *   (ms) Added PatternLayout::Multiline code by Cory Bennett to 
             render multiline messages.

1.10 (2007/03/27)
    *   (kg) Nikita Dedik pointed out that Saturday is missing from 
             @Log::Log4perl::DateFormat::WEEK_DAYS
    *   (ms) Scott Cline noticed a potential problem with the DBI
             appender reconnection logic in 'buffered' mode. Applied
             a patch.
    *   (ms) Changed DBI reconnect logic to perform even if the DB
             is pingable again.
    *   (ms) Applied code by Valerio Valdez Paolini with modifications
             to PropertyConfigurator.pm to allow pulling values from
             the property configurator by path.

1.09 (2007/02/07)
    *   (ms) Added $^S check to FAQ, as suggested by J. David Blackstone.
    *   (ms) Applied Robert Jacobson's patch for the "DDD" formatter
             in L4p::DateFormats, which now formats the day-of-year values
             numerically and precedes them with zeroes if necessary.
    *   (ms) Added %M{x} PatternLayout notation as requested by
             Ankur Gupta.
    *   (ms) Another Win32 test suite fix, no longer deleting an open
             file but moving it aside (rt.cpan:23520).

1.08 2006/11/18
    *   (ms) Applied test suite patch by Lars Thegler for 
             ancient perl 5.005_03.
    *   (ms) Applied patch by Jeremy Bopp to fix test suite running
             under Cygwin.
    *   (ms) Fixed documentation bug in L4p:Appender::File,
             s/recreate_signal/recreate_check_signal. Thanks to
             Todd Chapman and Robert Jacobson for reporting this.
    *   (ms) Fixed init(), which now deletes any config file watchers 
             left over from previous init_and_watch() calls. Reported
             by Andreas Koenig who saw sporadic errors in the test suite, 