@@ -4,6 +4,7 @@
 ###########################################
 use warnings;
 use strict;
+use Log::Log4perl::Appender::TestBuffer;
 
 my $stderr = "";
 
@@ -12,7 +13,7 @@ $SIG{__WARN__} = sub {
     $stderr .= $_[0];
 };
 
-use Test::More tests => 1;
+use Test::More tests => 3;
 
 use Log::Log4perl qw(:easy);
 
@@ -25,5 +26,30 @@ log4perl.appender.Term.layout = Log::Log4perl::Layout::SimpleLayout
     # This case caused a warning L4p 0.47
 INFO "Boo!";
 
-#print "stderr=[$stderr]\n";
 is($stderr, "", "no warning");
+
+# Test new level TRACE
+
+Log::Log4perl->init(\ q{
+log4perl.category   = TRACE, Buf
+log4perl.appender.Buf        = Log::Log4perl::Appender::TestBuffer
+log4perl.appender.Buf.layout = Log::Log4perl::Layout::SimpleLayout
+});
+
+my $appenders = Log::Log4perl->appenders();
+my $bufapp    = Log::Log4perl::Appender::TestBuffer->by_name("Buf");
+
+TRACE("foobar");
+is($bufapp->buffer(), "TRACE - foobar\n", "TRACE check");
+
+Log::Log4perl->init(\ q{
+log4perl.category   = DEBUG, Buf
+log4perl.appender.Buf        = Log::Log4perl::Appender::TestBuffer
+log4perl.appender.Buf.layout = Log::Log4perl::Layout::SimpleLayout
+});
+$bufapp    = Log::Log4perl::Appender::TestBuffer->by_name("Buf");
+
+my $log = Log::Log4perl::get_logger("");
+$log->trace("We don't want to see this");
+is($bufapp->buffer(), "", "Suppressed trace() check");
+
